--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="..\src\util\animation\animation_base.h" />
     <ClInclude Include="..\src\util\array.h" />
     <ClInclude Include="..\src\util\assert.h" />
+    <ClInclude Include="..\src\util\build_system\atlases_builder.h" />
     <ClInclude Include="..\src\util\build_system\atlas_info.h" />
     <ClInclude Include="..\src\util\build_system\build_config.h" />
     <ClInclude Include="..\src\util\build_system\build_info.h" />
@@ -311,6 +312,7 @@
     <ClCompile Include="..\src\util\animation\animation_base.cpp" />
     <ClCompile Include="..\src\util\animation\animation_group.cpp" />
     <ClCompile Include="..\src\util\assert_win.cpp" />
+    <ClCompile Include="..\src\util\build_system\atlases_builder.cpp" />
     <ClCompile Include="..\src\util\build_system\atlas_info.cpp" />
     <ClCompile Include="..\src\util\build_system\build_config.cpp" />
     <ClCompile Include="..\src\util\build_system\build_info.cpp" />
