--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj.filters
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj.filters
@@ -504,6 +504,9 @@
     <ClInclude Include="..\src\util\build_system\nonbuild_files_builder.h">
       <Filter>src\util\build_system</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\util\build_system\atlases_builder.h">
+      <Filter>src\util\build_system</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\render_system\render_system_base_interface.cpp">
@@ -861,6 +864,9 @@
       <Filter>src\util\build_system</Filter>
     </ClCompile>
     <ClCompile Include="..\src\util\build_system\nonbuild_files_builder.cpp">
+      <Filter>src\util\build_system</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\util\build_system\atlases_builder.cpp">
       <Filter>src\util\build_system</Filter>
     </ClCompile>
   </ItemGroup>
