--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj
@@ -179,7 +179,8 @@
     <ClInclude Include="..\src\util\callback.h" />
     <ClInclude Include="..\src\util\clipboard.h" />
     <ClInclude Include="..\src\util\containers\array.h" />
-    <ClInclude Include="..\src\util\containers\enumerable.h" />
+    <ClInclude Include="..\src\util\containers\idictionary.h" />
+    <ClInclude Include="..\src\util\containers\ienumerable" />
     <ClInclude Include="..\src\util\containers\pool.h" />
     <ClInclude Include="..\src\util\containers\tree_interface.h" />
     <ClInclude Include="..\src\util\containers\utils.h" />
@@ -325,10 +326,6 @@
     <ClCompile Include="..\src\util\build_system\build_system.cpp" />
     <ClCompile Include="..\src\util\build_system\nonbuild_files_builder.cpp" />
     <ClCompile Include="..\src\util\clipboard.cpp" />
-    <ClCompile Include="..\src\util\containers\array.cpp" />
-    <ClCompile Include="..\src\util\containers\enumerable.cpp" />
-    <ClCompile Include="..\src\util\containers\pool.cpp" />
-    <ClCompile Include="..\src\util\containers\tree_interface.cpp" />
     <ClCompile Include="..\src\util\file_system\file.cpp" />
     <ClCompile Include="..\src\util\file_system\file_info.cpp" />
     <ClCompile Include="..\src\util\file_system\file_system.cpp" />
